[package]
name = "eat_what"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13.5"
actix-web-actors = "4"
uuid = { version = "1.9.1", features = ["v4","v5", "serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
actix-cors = "0.7"
#log
# log = "0.4"
# env_logger = "0.11.3"